Fix workflow permissions and add manual trigger for dev workflow
Fixed two workflow issues:

1. Production workflow (migrate-prod.yml):
   - Added 'permissions: issues: write' to allow creating GitHub issues on failure
   - Fixes: 403 Resource not accessible by integration error

2. Development workflow (migrate-dev.yml):
   - Added 'workflow_dispatch' trigger for manual runs
   - Adds 'Run workflow' button in GitHub Actions UI
   - Added 'permissions: contents: read' for consistency

Both workflows now work correctly and can be manually triggered.

--- a/.github/workflows/migrate-dev.yml
+++ b/.github/workflows/migrate-dev.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - 'migrations/**/*.sql'
       - 'config/dblift-postgresql.yaml'
+  workflow_dispatch:  # Allow manual triggers
+
+permissions:
+  contents: read
 
 jobs:
   migrate:
