--- a/.github/workflows/migrate-dev.yml
+++ b/.github/workflows/migrate-dev.yml
@@ -22,37 +22,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup DBLift
-        run: |
-          # Download DBLift distribution
-          curl -L -o dblift-linux-x64.tar.gz \
-            https://github.com/dblift/dblift/releases/latest/download/dblift-linux-x64.tar.gz
-          tar xzf dblift-linux-x64.tar.gz
-          chmod +x dblift-linux-x64/dblift
-
       - name: Validate migrations
-        env:
-          DBLIFT_DB_URL: ${{ secrets.DEV_DB_URL }}
-          DBLIFT_DB_USERNAME: ${{ secrets.DEV_DB_USERNAME }}
-          DBLIFT_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
-          DBLIFT_DB_SCHEMA: public
         run: |
-          ./dblift-linux-x64/dblift validate \
-            --config config/dblift-postgresql.yaml \
+          docker run --rm \
+            -v ${{ github.workspace }}:/workspace \
+            -e DBLIFT_DB_URL=${{ secrets.DEV_DB_URL }} \
+            -e DBLIFT_DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
+            -e DBLIFT_DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
+            -e DBLIFT_DB_SCHEMA=public \
+            ghcr.io/cmodiano/dblift:latest validate \
+            --config /workspace/config/dblift-postgresql.yaml \
             --log-format text,json,html \
-            --log-dir logs
+            --log-dir /workspace/logs
 
       - name: Run migrations
-        env:
-          DBLIFT_DB_URL: ${{ secrets.DEV_DB_URL }}
-          DBLIFT_DB_USERNAME: ${{ secrets.DEV_DB_USERNAME }}
-          DBLIFT_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
-          DBLIFT_DB_SCHEMA: public
         run: |
-          ./dblift-linux-x64/dblift migrate \
-            --config config/dblift-postgresql.yaml \
+          docker run --rm \
+            -v ${{ github.workspace }}:/workspace \
+            -e DBLIFT_DB_URL=${{ secrets.DEV_DB_URL }} \
+            -e DBLIFT_DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
+            -e DBLIFT_DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
+            -e DBLIFT_DB_SCHEMA=public \
+            ghcr.io/cmodiano/dblift:latest migrate \
+            --config /workspace/config/dblift-postgresql.yaml \
             --log-format text,json,html \
-            --log-dir logs
+            --log-dir /workspace/logs
 
       - name: Upload migration logs
         uses: actions/upload-artifact@v4
@@ -64,12 +58,13 @@ jobs:
 
       - name: Check for drift
         if: success()
-        env:
-          DBLIFT_DB_URL: ${{ secrets.DEV_DB_URL }}
-          DBLIFT_DB_USERNAME: ${{ secrets.DEV_DB_USERNAME }}
-          DBLIFT_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
-          DBLIFT_DB_SCHEMA: public
         run: |
-          ./dblift-linux-x64/dblift diff \
-            --config config/dblift-postgresql.yaml
+          docker run --rm \
+            -v ${{ github.workspace }}:/workspace \
+            -e DBLIFT_DB_URL=${{ secrets.DEV_DB_URL }} \
+            -e DBLIFT_DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
+            -e DBLIFT_DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
+            -e DBLIFT_DB_SCHEMA=public \
+            ghcr.io/cmodiano/dblift:latest diff \
+            --config /workspace/config/dblift-postgresql.yaml
 
