Update all workflows to use Docker and fix permissions
Updated all 4 workflows to use Docker instead of binary downloads:

1. validate-sql.yml:
   - Use dblift-validation:latest (lightweight image)
   - Fixed image reference (cmodiano instead of dblift)
   - Simplified volume mounts

2. drift-detection.yml:
   - Added permissions: issues: write
   - Removed binary download step
   - Use Docker for drift checks
   - Fixed for all environments (dev/staging/prod)

3. migrate-dev.yml:
   - Already updated in previous commit

4. migrate-prod.yml:
   - Already updated in previous commit

All workflows now:
- ✅ Use Docker (no binary downloads needed)
- ✅ Have correct permissions
- ✅ Have manual trigger buttons (workflow_dispatch)
- ✅ Reference correct registry (ghcr.io/cmodiano)

--- a/.github/workflows/validate-sql.yml
+++ b/.github/workflows/validate-sql.yml
@@ -17,10 +17,9 @@ jobs:
       - name: Validate SQL with Docker
         run: |
           docker run --rm \
-            -v $(pwd)/migrations:/workspace/migrations \
-            -v $(pwd)/config/.dblift_rules.yaml:/workspace/.dblift_rules.yaml \
-            ghcr.io/dblift/dblift:validation-latest \
-            migrations/ \
+            -v ${{ github.workspace }}:/workspace \
+            ghcr.io/cmodiano/dblift-validation:latest \
+            validate-sql /workspace/migrations/ \
             --dialect postgresql \
-            --rules-file .dblift_rules.yaml \
+            --rules-file /workspace/config/.dblift_rules.yaml \
             --format github-actions
