--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -6,6 +6,10 @@ on:
     - cron: '0 9 * * *'
   workflow_dispatch:  # Manual trigger
 
+permissions:
+  contents: read
+  issues: write  # Allow creating issues when drift detected
+
 jobs:
   detect-drift:
     name: Detect Schema Drift
@@ -18,25 +22,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup DBLift
-        run: |
-          curl -L -o dblift-linux-x64.tar.gz \
-            https://github.com/dblift/dblift/releases/latest/download/dblift-linux-x64.tar.gz
-          tar xzf dblift-linux-x64.tar.gz
-          chmod +x dblift-linux-x64/dblift
-
       - name: Check for drift on ${{ matrix.environment }}
-        env:
-          DBLIFT_DB_URL: ${{ secrets[format('{0}_DB_URL', matrix.environment)] }}
-          DBLIFT_DB_USERNAME: ${{ secrets[format('{0}_DB_USERNAME', matrix.environment)] }}
-          DBLIFT_DB_PASSWORD: ${{ secrets[format('{0}_DB_PASSWORD', matrix.environment)] }}
-          DBLIFT_DB_SCHEMA: public
         run: |
-          ./dblift-linux-x64/dblift diff \
-            --config config/dblift-postgresql.yaml \
+          docker run --rm \
+            -v ${{ github.workspace }}:/workspace \
+            -e DBLIFT_DB_URL=${{ secrets[format('{0}_DB_URL', matrix.environment)] }} \
+            -e DBLIFT_DB_USERNAME=${{ secrets[format('{0}_DB_USERNAME', matrix.environment)] }} \
+            -e DBLIFT_DB_PASSWORD=${{ secrets[format('{0}_DB_PASSWORD', matrix.environment)] }} \
+            -e DBLIFT_DB_SCHEMA=public \
+            ghcr.io/cmodiano/dblift:latest diff \
+            --config /workspace/config/dblift-postgresql.yaml \
             --ignore-unmanaged \
             --log-format json,html \
-            --log-dir logs
+            --log-dir /workspace/logs
 
       - name: Upload drift report
         uses: actions/upload-artifact@v4
