--- a/.github/workflows/migrate-dev.yml
+++ b/.github/workflows/migrate-dev.yml
@@ -18,6 +18,21 @@ jobs:
     runs-on: ubuntu-latest
     environment: development
     
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_USER: dblift_user
+          POSTGRES_PASSWORD: dblift_pass
+          POSTGRES_DB: dblift_demo
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,9 +41,10 @@ jobs:
         run: |
           docker run --rm \
             -v ${{ github.workspace }}:/workspace \
-            -e DBLIFT_DB_URL=${{ secrets.DEV_DB_URL }} \
-            -e DBLIFT_DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
-            -e DBLIFT_DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
+            --network host \
+            -e DBLIFT_DB_URL=jdbc:postgresql://localhost:5432/dblift_demo \
+            -e DBLIFT_DB_USERNAME=dblift_user \
+            -e DBLIFT_DB_PASSWORD=dblift_pass \
             -e DBLIFT_DB_SCHEMA=public \
             ghcr.io/cmodiano/dblift:latest validate \
             --config /workspace/config/dblift-postgresql.yaml \
@@ -39,9 +55,10 @@ jobs:
         run: |
           docker run --rm \
             -v ${{ github.workspace }}:/workspace \
-            -e DBLIFT_DB_URL=${{ secrets.DEV_DB_URL }} \
-            -e DBLIFT_DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
-            -e DBLIFT_DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
+            --network host \
+            -e DBLIFT_DB_URL=jdbc:postgresql://localhost:5432/dblift_demo \
+            -e DBLIFT_DB_USERNAME=dblift_user \
+            -e DBLIFT_DB_PASSWORD=dblift_pass \
             -e DBLIFT_DB_SCHEMA=public \
             ghcr.io/cmodiano/dblift:latest migrate \
             --config /workspace/config/dblift-postgresql.yaml \
@@ -61,9 +78,10 @@ jobs:
         run: |
           docker run --rm \
             -v ${{ github.workspace }}:/workspace \
-            -e DBLIFT_DB_URL=${{ secrets.DEV_DB_URL }} \
-            -e DBLIFT_DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
-            -e DBLIFT_DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
+            --network host \
+            -e DBLIFT_DB_URL=jdbc:postgresql://localhost:5432/dblift_demo \
+            -e DBLIFT_DB_USERNAME=dblift_user \
+            -e DBLIFT_DB_PASSWORD=dblift_pass \
             -e DBLIFT_DB_SCHEMA=public \
             ghcr.io/cmodiano/dblift:latest diff \
             --config /workspace/config/dblift-postgresql.yaml
