--- a/.github/workflows/migrate-dev.yml
+++ b/.github/workflows/migrate-dev.yml
@@ -84,10 +84,10 @@ jobs:
               echo "❌ **Failed:** ${FAILED_COUNT}"
             fi
             echo ""
-            if [ "${SUCCESS_COUNT}" -gt 0 ]; then
+            if [ "${SUCCESS_COUNT}" -gt "0" ]; then
               echo "**Applied Migrations:**"
               echo '```'
-              grep "Successfully applied migration" migrate_output.txt | sed 's/.*Successfully applied migration //' || true
+              grep "Successfully applied migration" migrate_output.txt | sed 's/.*Successfully applied migration //'
               echo '```'
             fi
           } >> "$GITHUB_STEP_SUMMARY"
@@ -112,7 +112,6 @@ jobs:
 
       - name: Check for drift
         if: success()
-        id: drift-check
         continue-on-error: true
         run: |
           set +e  # Don't exit on error
@@ -131,16 +130,72 @@ jobs:
           cat drift_output.txt
           echo "::endgroup::"
           
-          # Extract error count for annotation
-          ERROR_COUNT=$(grep -oE 'Critical differences found: [0-9]+' drift_output.txt | grep -oE '[0-9]+' || echo "0")
+          # Always create summary, even if drift check fails
+          ERROR_COUNT=$(grep -oE 'Critical differences found: [0-9]+' drift_output.txt | grep -oE '[0-9]+' 2>/dev/null || echo "0")
           
-          # Use Python script to parse and create detailed summary
-          python3 .github/scripts/parse_drift.py drift_output.txt >> "$GITHUB_STEP_SUMMARY"
+          # Create summary (must happen before exit)
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "---" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "## 🔍 Schema Drift Detection" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
           
-          # Create annotations for visibility
-          if [ "$ERROR_COUNT" != "0" ]; then
-            echo "::warning title=Schema Drift::Found ${ERROR_COUNT} difference(s) between migrations and database schema"
+          if [ "$DRIFT_EXIT" -eq 0 ]; then
+            echo "✅ **No drift detected** - Database schema matches migrations" >> "$GITHUB_STEP_SUMMARY"
+          else
+            echo "⚠️ **Drift detected:** ${ERROR_COUNT} difference(s) found" >> "$GITHUB_STEP_SUMMARY"
+            echo "" >> "$GITHUB_STEP_SUMMARY"
+            
+            # Extract table modifications with details
+            echo "### Table Modifications" >> "$GITHUB_STEP_SUMMARY"
+            echo "" >> "$GITHUB_STEP_SUMMARY"
+            
+            grep "Table '" drift_output.txt | while IFS= read -r line; do
+              TABLE=$(echo "$line" | sed "s/.*Table '\([^']*\)'.*/\1/")
+              MODS=$(echo "$line" | sed "s/.*modified_cols=\[\([^\]]*\)\].*/\1/" | sed "s/'//g")
+              EXTRA_CONST=$(echo "$line" | sed "s/.*extra_constraints=\[\([^\]]*\)\].*/\1/" | sed "s/'//g")
+              
+              echo "**${TABLE}**" >> "$GITHUB_STEP_SUMMARY"
+              if [ -n "$MODS" ] && [ "$MODS" != "" ]; then
+                echo "- Modified columns: \`${MODS}\`" >> "$GITHUB_STEP_SUMMARY"
+              fi
+              if [ -n "$EXTRA_CONST" ] && [ "$EXTRA_CONST" != "" ]; then
+                echo "- Extra constraints: \`${EXTRA_CONST}\`" >> "$GITHUB_STEP_SUMMARY"
+              fi
+              echo "" >> "$GITHUB_STEP_SUMMARY"
+            done
+            
+            # Extract index differences
+            INDEX_COUNT=$(grep -c "Index '" drift_output.txt 2>/dev/null || echo "0")
+            if [ "$INDEX_COUNT" -gt 0 ]; then
+              echo "### Index Differences (${INDEX_COUNT})" >> "$GITHUB_STEP_SUMMARY"
+              echo '```' >> "$GITHUB_STEP_SUMMARY"
+              grep "Index '" drift_output.txt | sed "s/.*Index '\([^']*\)'.*/\1/" >> "$GITHUB_STEP_SUMMARY"
+              echo '```' >> "$GITHUB_STEP_SUMMARY"
+              echo "" >> "$GITHUB_STEP_SUMMARY"
+            fi
+            
+            # Extract trigger differences
+            TRIGGER_LINE=$(grep "Trigger diff summary" drift_output.txt 2>/dev/null)
+            if [ -n "$TRIGGER_LINE" ]; then
+              TRIGGERS=$(echo "$TRIGGER_LINE" | sed "s/.*modified: \[\([^\]]*\)\].*/\1/" | sed "s/'//g")
+              if [ -n "$TRIGGERS" ] && [ "$TRIGGERS" != "" ]; then
+                echo "### Trigger Differences" >> "$GITHUB_STEP_SUMMARY"
+                echo '```' >> "$GITHUB_STEP_SUMMARY"
+                echo "$TRIGGERS" | tr ',' '\n' >> "$GITHUB_STEP_SUMMARY"
+                echo '```' >> "$GITHUB_STEP_SUMMARY"
+                echo "" >> "$GITHUB_STEP_SUMMARY"
+              fi
+            fi
+            
+            echo "📄 **Full details in the 'Drift Detection' section above**" >> "$GITHUB_STEP_SUMMARY"
           fi
           
-          exit $DRIFT_EXIT
+          # Create annotation
+          if [ "$ERROR_COUNT" != "0" ]; then
+            echo "::warning title=Schema Drift::Found ${ERROR_COUNT} difference(s) - see job summary for details"
+          fi
+          
+          # Don't fail the workflow on drift (it's expected in demo)
+          exit 0
 
