Add interactive demo for GitHub Codespaces
- Create QUICKSTART.md with step-by-step commands
- Add demo.sh script for automated demo walkthrough
- Add .devcontainer config for GitHub Codespaces
- Update docker-compose with demo service
- Update README with prominent 'Try It Now' section
- Users can now see DBLift in action with real commands
- Much clearer than watching workflow logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,18 @@ services:
     depends_on:
       - postgres
 
+  # Demo environment (for GitHub Codespaces)
+  demo:
+    image: ubuntu:22.04
+    container_name: dblift-demo-env
+    command: sleep infinity
+    working_dir: /workspace
+    volumes:
+      - .:/workspace
+    depends_on:
+      postgres:
+        condition: service_healthy
+
 volumes:
   postgres_data:
   sqlserver_data:
