Add comprehensive CI/CD validation demo
Features:
- PR validation workflow using DBLift validation Docker image
- Validates SQL against business rules
- GitHub inline annotations on violations
- SARIF report generation for GitHub Code Scanning
- Automated PR comments with validation summary
- Example bad/good migrations for testing
- Complete documentation guide

Demonstrates:
✅ Docker-based validation in CI/CD
✅ GitHub Actions integration
✅ SARIF format for security scanning
✅ Blocking PRs with validation errors
✅ Best practices vs anti-patterns

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./sample-data:/docker-entrypoint-initdb.d
+      # Note: sample-data is NOT auto-loaded - run migrations first, then load manually
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U dblift_user"]
       interval: 5s
