Fix configs and update to use validation-lite Docker image
- Add sslmode=disable to PostgreSQL configs for Docker compatibility
- Create Dockerfile.validation-lite without JVM (no crashes!)
- Update PR validation workflow to use validation-latest image
- SARIF output redirected to file from stdout
- Validation image works perfectly for CI/CD
- No more JVM crashes in Docker

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -60,13 +60,11 @@ jobs:
           docker run --rm \
             -v $(pwd)/migrations:/workspace/migrations \
             -v $(pwd)/config/.dblift_rules.yaml:/workspace/.dblift_rules.yaml \
-            -v $(pwd):/output \
             ghcr.io/dblift/dblift:validation-latest \
             migrations/ \
             --dialect postgresql \
             --rules-file .dblift_rules.yaml \
-            --format sarif \
-            --output /output/validation-results.sarif || echo "SARIF generation completed"
+            --format sarif > validation-results.sarif || echo "SARIF generation completed"
 
       - name: Upload SARIF to GitHub Security
         if: steps.changed-files.outputs.any_changed == 'true'
