--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,14 @@ services:
       POSTGRES_DB: dblift_demo
       POSTGRES_USER: dblift_user
       POSTGRES_PASSWORD: dblift_pass
+      POSTGRES_HOST_AUTH_METHOD: md5
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./config/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
       # Note: sample-data is NOT auto-loaded - run migrations first, then load manually
+    command: postgres -c hba_file=/etc/postgresql/pg_hba.conf
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U dblift_user"]
       interval: 5s
