--- a/.github/workflows/scenario-runner.yml
+++ b/.github/workflows/scenario-runner.yml
@@ -27,7 +27,7 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready -U dblift_user -d dblift_demo
+          --health-cmd "pg_isready -U dblift_user -d dblift_demo"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
