--- a/config/dblift-postgresql.yaml
+++ b/config/dblift-postgresql.yaml
@@ -13,6 +13,9 @@ migrations:
   directories:
     - "./migrations/features"
     - "./migrations/performance"
+  undo_directories:
+    - "./migrations/features"
+    - "./migrations/performance"
   recursive: true
   script_encoding: "utf-8"
 
